PRL-3715 - fixed moving docs into confid for docs uploaded by CA